# Paper_Writing_Code

./: .gitignore
scholarforge/: HOW_TO_RUN.md  Instructions_HOW_TO_RUN.md  README.md  config.example.yaml  config.yaml  pyproject.toml  run.sh
scholarforge/examples/: run_with_repo.sh
scholarforge/prompts/: default.yaml
scholarforge/src/scholarforge/: __init__.py  cli.py  config.py  pipeline.py  repo_reader.py
scholarforge/src/scholarforge/gap_analysis/: __init__.py  analyzer.py  missing_md.py  models.py  watcher.py
scholarforge/src/scholarforge/literature/: __init__.py  arxiv_search.py  knowledge_cards.py  models.py  search_orchestrator.py  semantic_scholar.py
scholarforge/src/scholarforge/llm/: __init__.py  provider.py
scholarforge/src/scholarforge/review/: __init__.py  peer_review.py
scholarforge/src/scholarforge/utils/: __init__.py  logger.py
scholarforge/src/scholarforge/verification/: __init__.py  arxiv_verify.py  crossref_verify.py  datacite_verify.py  models.py  pipeline.py  s2_verify.py
scholarforge/src/scholarforge/writing/: __init__.py  anti_slop.py  chart_generator.py  latex_compiler.py  models.py  outliner.py  section_writer.py
scholarforge/templates/icml2026/: icml2026.sty
scholarforge/tests/: __init__.py  test_anti_slop.py  test_config.py  test_verification.py
